# cryptography

./: CMakeLists.txt  error_generator.c  randomblocks.py  randomblocks_gen.py  readme.md  test_keygen.py  timingattack.py
McEliece/: modern_mceliece.ipynb  modern_mceliece_sidechannel.ipynb  modern_mceliese.ipynb
McEliece_C/: decrypt.c  encrypt.c  keygen.c  mceliece.c  mceliece_supp.c  mceliece_supp.h
